Updated openAPI spec addressing minor changes
