# payment/src/main/java/com/application/payment/controller/PaymentController.java
@@ -2,6 +2,7 @@ package com.application.payment.controller;
 
 import com.application.payment.api.PaymentApi;
 import com.application.payment.model.PaymentRequest;
+import com.application.payment.model.StringResponse;
 import com.application.payment.service.PaymentService;
 import com.application.payment.util.PaymentUtil;
 import lombok.extern.slf4j.Slf4j;
@@ -23,21 +24,25 @@ public class PaymentController implements PaymentApi {
     PaymentUtil paymentUtil;
 
     @Override
-    public ResponseEntity<String> createPayment(PaymentRequest paymentRequest) {
+    public ResponseEntity<StringResponse> createPayment(PaymentRequest paymentRequest) {
         log.info("Entered create payment in Payment Controller : {}",paymentRequest);
+        StringResponse stringResponse = new StringResponse();
         try {
             paymentUtil.verifyNullCheck(paymentRequest);
             paymentService.createPayment(paymentRequest);
         } catch (IllegalArgumentException e) {
             log.error("Invalid input while creating payment: {}", e.getMessage());
+            stringResponse.setMessage("Invalid request data: " + e.getMessage());
             return ResponseEntity.status(HttpStatus.BAD_REQUEST)
-                    .body("Invalid request data: " + e.getMessage());
+                    .body(stringResponse);
         } catch (Exception e) {
             log.error("Unexpected error while creating payment: {}", e.getMessage());
+            stringResponse.setMessage("An unexpected error occurred while processing the payment.");
             return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
-                    .body("An unexpected error occurred while processing the payment.");
+                    .body(stringResponse);
         }
 
-        return ResponseEntity.ok("Payment created successfully!");
+        stringResponse.setMessage("Payment created successfully!");
+        return ResponseEntity.ok(stringResponse);
     }
 }
